--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href ="./resources/css/style.css" trype="text/css" rel="stylesheet">
+  <link href ="./resources/css/style.css" type="text/css" rel="stylesheet">
   <title>Excursion.</title>
   <h1>Discover hidden places in the world around you<h1>
     <a href="" id="download">Download Excursion (Coming soon!)</a>
 </head>
     <body>
+      <div class="vid">
+        <video width="auto" height="auto" autoplay>
+          <source src="./resources/video/excursion.mp4" type="video/mp4">
+        </video>
+        <p>Your personal travel guide</p>
+      </div>
+      <div class="tent">
+        <p>Excursion remembers places you like, and recommends new points of interst around you.</p>
+        <img src="./resources/images/camp.jpg">
+      </br>
+      </div>
+      <div class="phone">
+        <img src="./resources/images/phone.png">
+        <p>Coming Soon for iPhone and Android</p>
+        <a href="" id="download">Download Excursion (Coming soon!)</a>
+      </div>
+      <div class="footer">
+        <p>Excursion</p>
     </body>
 </html>
